[workspace]
members = ["src/lib", "src/bin"]
resolver = "3"


[workspace.package]
edition = "2024"
license = "MIT OR Apache-2.0"
keywords = ["cover-art", "metadata", "image-optimisation", "audio-processing", "library"]
categories = ["command-line-utilities", "development-tools"]
authors = ["UnknownSuperficialNight"]

[profile.release]
opt-level = 3     #'z'   # Optimise for size
lto = true        # Enable link-time optimisation
codegen-units = 1 # Reduce number of codegen units to increase optimisations
panic = 'abort'   # Abort on panic
strip = true      # Strip symbols from binary*
